Fix classname and section header spacing

--- a/plugins/woocommerce-admin/client/customize-store/assembler-hub/style.scss
+++ b/plugins/woocommerce-admin/client/customize-store/assembler-hub/style.scss
@@ -86,6 +86,10 @@
 		width: 348px;
 	}
 
+	.edit-site-sidebar-navigation-screen-patterns__group-header {
+		margin-top: 32px;
+	}
+
 	.edit-site-sidebar-navigation-screen__title-icon,
 	.edit-site-site-hub__view-mode-toggle-container,
 	.edit-site-layout__view-mode-toggle-icon.edit-site-site-icon {
